crates/carta/tests/snapshots/golden_writer__docbook__math__braces.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  $\overbrace{a+b}$ $\underbrace{x+y+z}$ $\overbrace{a+b}^{n}$
  $\underbrace{x+y}_{k}$
</para>
