crates/carta/tests/snapshots/golden_writer__docbook__math__cancel.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  $\cancel{x}$ $\bcancel{y+z}$ $\xcancel{abc}$
</para>
