crates/carta/tests/snapshots/golden_writer__docbook__math__ext-arrows.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  $\xrightarrow{f}$ $\xleftarrow{g}$ $\xrightarrow[u]{f}$
</para>
