crates/carta/tests/snapshots/golden_writer__docbook__math__frac-styles.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  $\frac{a}{b}$ $\tfrac{a}{b}$ $\dfrac{a}{b}$
</para>
