crates/carta/tests/snapshots/golden_writer__docbook__math__math-display.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  ∫<subscript>0</subscript><superscript>1</superscript><emphasis>x</emphasis> <emphasis>d</emphasis><emphasis>x</emphasis>
</para>
