crates/carta/tests/snapshots/golden_writer__docbook__math__math-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  an equation
  <emphasis>a</emphasis><superscript>2</superscript> + <emphasis>b</emphasis><superscript>2</superscript> = <emphasis>c</emphasis><superscript>2</superscript>
  inline
</para>
