crates/carta/tests/snapshots/golden_writer__docbook__math__negation.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
   ≠ <emphasis>b</emphasis>  ≮ <emphasis>c</emphasis>
   ⊄ <emphasis>B</emphasis>  ⊬ <emphasis>ϕ</emphasis> ↛
  <emphasis>a̸</emphasis>
</para>
