crates/carta/tests/snapshots/golden_writer__docbook__math__over-under-set.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  $\overset{a}{b}$ $\underset{a}{b}$ $\stackrel{\text{def}}{=}$
</para>
